[package]
name = "rusty-chips"
version = "0.1.0"
authors = ["wcampbell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.9.1"
rand = "0.8.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx", "bundled", "use-pkgconfig"]
